tests/reference/asr-character_deferred_length_mismatch-64fcb12.stderr
semantic error: Type mismatch in argument `xx`: expected `string[:] allocatable` but got `string[:]`
  --> tests/errors/character_deferred_length_mismatch.f90:11:13
   |
11 |     call ss(x)
   |             ^ 
